@@ -1,3 +1,8 @@
+2006-06-19  Walter Doerwald  <walter@livinglogic.de>
+
+	* IPython/Extensions/ibrowse.py: ibrowse now properly handles terminal
+	resizing. This requires Python 2.5 to word.
+
 2006-06-16  Walter Doerwald  <walter@livinglogic.de>
 
 	* IPython/Extensions/ibrowse.py: Add two new commands to
